Oct 16:
    * Changes from the October 15th build 9.0.2.36206 are included.
        * Balance of All Things crit buff nerfed to 10% per stack
        * Oneth's Clear Vision proc rate buffed to 20%/40% chance for free Starfall/Starsurge, respectively
        * Timeworn Dreambinder cost reduction nerfed to 10%, added damage buff of 10% per stack
        * Fury of the Skies conduit nerfed to 1/3 value
        * Adaptive Swarm damage adjustment nerfed to +9%, debuff effect buffed to 30%
        * Kindred Spirits pool transfer rate nerfed to 20%, pool consumption rate nerfed to 15%
        * Ravenous Frenzy haste buff nerfed to 1% per stack, duration buffed to 20s
    * APL updated to better utilize Adaptive Swarm & Timeworn Dreambinder

Oct 8:
    * Changes from the October 7th build 9.0.2.36165 are included.
        * Adaptive Swarm damage increased by 22%
    * Changes from the October 7th hotfix to PTR build 9.0.1.36131 are included.
        * Shooting Stars proc rate increased to 15% and grants 3 AP per proc
        * Soul of the Forest AP bonus to Wrath increased to 50%, AoE damage bonus to Starfire increased to 150%
        * Starlord grants 4% haste per stack and lasts 15 seconds
        * Balance Druid spec-wide aura changed from -18% to -8%
    * Kyrian accounts for 15% of pool being lost to damage taken
    * Precise Alignment conduit removed from base profiles

Oct 1:
    * Changes from the September 30th build 9.0.2.36086 are included.
    * Conduits are set to rank 7

Sep 23:
    * APL optimizations for DoTs, AoE, CD timings, and Kindred Spirits
    * Further optimization may be possible to the APL - if you discover an improvement, please submit a report
    * Add full enchants to the base profile
    * Change base profile race to Troll

Sep 18:
    * Changes from the September 17th build 9.0.2.35938 are included.
        * Lunar Eclipse now grants 20% crit to Starfire
        * Soul of the Forest doubles Starfire splash damage