@@ -12,7 +12,7 @@
       (async () => {
         const response = await fetch('https://api.github.com/repos/balance-simc/Balance-SimC/contents/');
         const data = await response.json();
-        let htmlString = '<ul style=\"font-family:monospace; font-size:large;\">';
+        let htmlString = '<ul style=\"font-family:monospace; column-count:2;\">';
         for (let file of data) {
           let ext = file.name.split('.').pop();
           if (ext == 'txt' || ext == 'rar') {
@@ -55,7 +55,7 @@
             <option value="by_combo_0.html">Dungeon</option>
           </select>
         </div>
-        <div><iframe id="frame2" src="by_combo_1.html" style="border:none; font-family:monospace; font-size:large; width:45ch; height:30em;"></iframe></div>
+        <div><iframe id="frame2" src="by_combo_1.html" style="border:none; font-family:monospace; font-size:large; width:44ch; height:77ex;"></iframe></div>
         <div style="text-align:center; font-size:larger; margin-top:1em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=faq.txt" target="simframe" onclick="setTitle('Frequently Asked Questions')"><b>FAQ (Updated October 16th, 2020)</b></a></div>
         <div style="text-align:center; font-size:larger; margin-top:0.5em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=balance.txt" target="simframe" onclick="setTitle('Balance APL')"><b>Shadowlands BETA Balance APL</b></a></div>
         <div style="text-align:center; font-size:larger; margin-top:0.5em; margin-bottom:1em;"><a style="text-decoration:underline;" href="https://github.com/balance-simc/Balance-SimC/issues/new/choose"><b>Bugs/Improvements/Questions</b></a></div>
@@ -63,7 +63,7 @@
       </div>
       <div style="display:flex; flex-direction:column; height:97vh">
         <div><b><span id="simtitle">Detailed Sims by Talents</span></b> <a href="by_talent.html" target="simframe" style="font-family:monospace; text-decoration:underline;" onclick="resetTitle()">reset</a></div>
-        <iframe name="simframe" src="by_talent.html" style="border:none; height:98%; width:1280px; margin-top:5px" onload="changeFrame(this)"></iframe>
+        <iframe name="simframe" src="by_talent.html" style="border:none; height:98%; width:1260px; margin-top:5px" onload="changeFrame(this)"></iframe>
       </div>
     </div>
   <body>
